--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 						<div class="camera_caption">
 							<div class="main-container">
 								<div class="container">
-									<h5 class="wow fadeInUp animated">#1 Cleaning App</h5>
-									<h1 class="wow fadeInUp animated">Great Features with <br>Best Cleaner.</h1>
-									<p class="wow fadeInUp animated">No need for a  Wi-Fi network or mobile data plan. The <br> choice of OVER 1 billion users.</p>
+									<h5 class="wow fadeInUp animated">प्रतिलिपि हिंदी </h5>
+									<h1 class="wow fadeInUp animated">कहानियों की दुनिया</h1>
+									<p class="wow fadeInUp animated">कहानियाँ, कवितायें, ग़ज़ल, उपन्यास इत्यादि<br>पढ़ने और लिखने का सबसे बड़ा मंच</p>
 									<a href="course-2-column.html" class="tran3s wow fadeInLeft animated button-one" data-wow-delay="0.499s"><i class="fa fa-apple" aria-hidden="true"></i>App Store</a>
 									<a href="course-2-column.html" class="tran3s wow fadeInRight animated button-two" data-wow-delay="0.499s"><img src="images/icon/2.png" alt="">GooglePlay</a>
 									<div class="image-wrapper wow fadeInUp animated" data-wow-delay="0.75s">
@@ -88,9 +88,9 @@
 						<div class="camera_caption">
 							<div class="main-container">
 								<div class="container">
-									<h5 class="wow fadeInUp animated">#1 Cleaning App</h5>
-									<h1 class="wow fadeInUp animated">Great Features with <br>Best Cleaner.</h1>
-									<p class="wow fadeInUp animated">No need for a  Wi-Fi network or mobile data plan. The <br> choice of OVER 1 billion users.</p>
+									<h5 class="wow fadeInUp animated">प्रतिलिपि हिंदी </h5>
+									<h1 class="wow fadeInUp animated">कहानियों की दुनिया</h1>
+									<p class="wow fadeInUp animated">कहानियाँ, कवितायें, ग़ज़ल, उपन्यास इत्यादि<br>पढ़ने और लिखने का सबसे बड़ा मंच</p>
 									<a href="course-2-column.html" class="tran3s wow fadeInLeft animated button-one" data-wow-delay="0.499s"><i class="fa fa-apple" aria-hidden="true"></i>App Store</a>
 									<a href="course-2-column.html" class="tran3s wow fadeInRight animated button-two" data-wow-delay="0.499s"><img src="images/icon/2.png" alt="">GooglePlay</a>
 									<div class="image-wrapper wow fadeInUp animated" data-wow-delay="0.75s">
@@ -158,13 +158,14 @@
 							<div class="col-lg-6 col-xs-12 float-right  wow fadeInRight">
 								<div class="text">
 									<div class="theme-title-two">
-										<h2>Boost up your phone in just one click!</h2>
-										<p>No need for a  Wi-Fi network or mobile data plan. The choice of OVER 1 billion users.</p>
+										<h2>पढ़ें हिन्दी कहानियाँ बिलकुल फ्री!!!</h2>
+										<p>अब डाउनलोड करें और बिना इन्टरनेट के भी अपनी मनपसंद कहानियाँ, कवितायें, ग़ज़ल, निबंध, लेख, शेरो-शायरी, उपन्यास, लघु-कथायें, बच्चों की कहानियाँ इत्यादि पढ़ें।</p>
 									</div> <!-- /.theme-title-two -->
 									<ul>
-										<li><i class="flaticon-tick"></i> Auto clean mood with super minimize option</li>
-										<li><i class="flaticon-tick"></i> Create your own mood with custome clean &amp; also make boostup sound</li>
-										<li><i class="flaticon-tick"></i> Auto clean mood with super minimize option</li>
+										<li><i class="flaticon-tick"></i> 2 लाख से अधिक कहानियाँ</li>
+										<li><i class="flaticon-tick"></i> Play store में 4.8 रेटिंग</li>
+										<li><i class="flaticon-tick"></i> बिलकुल निःशुल्क!!!</li>
+										<li><i class="flaticon-tick"></i> बिना इंटरनेट के भी!!!</li>
 									</ul>
 								</div>
 							</div>
@@ -210,24 +211,24 @@
 										<div class="col-xs-6">
 											<div class="single-feature bg-one m-fix js-tilt">
 												<i class="flaticon-diamond"></i>
-												<h5>User Friendly</h5>
+												<h5>बिना इंटरनेट के!</h5>
 												<p>Sed ut perspic unde omnis iste natus error volu. </p>
 											</div>
 											<div class="single-feature bg-two js-tilt">
 												<i class="flaticon-multimedia"></i>
-												<h5>Fast Messaging</h5>
+												<h5>बिलकुल निःशुल्क!</h5>
 												<p>Sed ut perspic unde omnis iste natus error volu. </p>
 											</div>
 										</div>
 										<div class="col-xs-6">
 											<div class="single-feature bg-three js-tilt">
 												<i class="flaticon-squares"></i>
-												<h5>Minimal Interfae</h5>
+												<h5>आपकी मनपसंद श्रेणियों</h5>
 												<p>Sed ut perspic unde omnis iste natus error volu. </p>
 											</div>
 											<div class="single-feature bg-four js-tilt">
 												<i class="flaticon-lock"></i>
-												<h5>Secure Monitoring</h5>
+												<h5>आपकी कहानी</h5>
 												<p>Sed ut perspic unde omnis iste natus error volu. </p>
 											</div>
 										</div>
