--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
 							<div class="row">
 								<div class="col-lg-8 col-xs-12 float-right wow fadeInUp">
 									<div class="theme-title-one">
-										<h6>Testimonials</h6>
-										<h2>Check what people say <br>About us!</h2>
+										<h6>टिपण्णी</h6>
+										<h2>लोग क्या कहते हैं?</h2>
 									</div> <!-- /.theme-title-one -->
 								</div> <!-- /.col- -->
 							</div> <!-- /.row -->
@@ -264,40 +264,40 @@
 								<div id="watch-video">
 									<h6>Watch</h6>
 									<h4>Intro Video</h4>
-									<a data-fancybox href="https://www.youtube.com/embed/r-AuLm7S3XE?rel=0&amshowinfo=0" class="tran3s theme-button"><i class="fa fa-play" aria-hidden="true"><span></span></i></a>
+									<a data-fancybox href="https://youtu.be/9vBRexlaHok" class="tran3s theme-button"><i class="fa fa-play" aria-hidden="true"><span></span></i></a>
 								</div>
 								<div class="main-slider-wrapper">
 									<div class="testimonial-slider">
 										<div class="item">
 											<i class="flaticon-straight-quotes"></i>
-											<p>“Excepteur sint occaecat cupida non at proident, sunt culp officia deserun moll anim est laborum. Sed perspi!</p>
+											<p>“अति सुंदर है। बहुत सारे कहानियों एवं कविता का अद्भुत संग्रह है।इस में आप अपनी कहानी लिख सकते हैं तथा उसे सार्वजनिक साझा कर सकते हैं।</p>
 											<div class="clearfix">
 												<img src="images/home/a-1.jpg" alt="" class="float-left">
 												<div class="name float-left">
-													<h6>Rashed Ka.</h6>
-													<span>Berlin</span>
+													<h6>Prethula pIkU</h6>
+													<span>14 July 2018</span>
 												</div>
 											</div>
 										</div>
 										<div class="item">
 											<i class="flaticon-straight-quotes"></i>
-											<p>“Excepteur sint occaecat cupida non at proident, sunt culp officia deserun moll anim est laborum. Sed perspi!</p>
+											<p>“नवोदित लेखकों और साहित्य के पाठकों के लिए भारतीय भाषाओं में उपलब्ध अपनी तरह का इकलौता मंच। डेवलपर को बहुत बहुत साधुवाद।</p>
 											<div class="clearfix">
 												<img src="images/home/a-1.jpg" alt="" class="float-left">
 												<div class="name float-left">
-													<h6>Zubayer Hasan</h6>
-													<span>Berlin</span>
+													<h6>shreesh rakesh jain</h6>
+													<span>30 July 2018</span>
 												</div>
 											</div>
 										</div>
 										<div class="item">
 											<i class="flaticon-straight-quotes"></i>
-											<p>“Excepteur sint occaecat cupida non at proident, sunt culp officia deserun moll anim est laborum. Sed perspi!</p>
+											<p>“बहुत ही बढ़िया प्रयास किया है इतने साल लेख आदि की एक स्थान पर एकत्रित करने का। पुरानी यादें ताज़ा हो गईं । बहुत ही बढ़िया ऐप ।</p>
 											<div class="clearfix">
 												<img src="images/home/a-1.jpg" alt="" class="float-left">
 												<div class="name float-left">
-													<h6>Foqrul Munna</h6>
-													<span>Berlin</span>
+													<h6>Ashok kumar Tamrakar</h6>
+													<span>27 July 2018</span>
 												</div>
 											</div>
 										</div>
